--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-server.port=5000
+#server.port=5000
 
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=update
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/curso_java
+#spring.datasource.username=root
+#spring.datasource.password=
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://root:BmAUQjXu8CG9ZENRiIfH@containers-us-west-118.railway.app:7304/railway
 spring.datasource.username=root
 spring.datasource.password=BmAUQjXu8CG9ZENRiIfH
