--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:BmAUQjXu8CG9ZENRiIfH@containers-us-west-118.railway.app:7304/railway
-spring.datasource.username=root
-spring.datasource.password=BmAUQjXu8CG9ZENRiIfH
+spring.datasource.url=${MYSQL_URL}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
