--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:BmAUQjXu8CG9ZENRiIfH@containers-us-west-118.railway.app:7304/railway
-spring.datasource.username=root
-spring.datasource.password=BmAUQjXu8CG9ZENRiIfH
+spring.datasource.url=jdbc:mysql://mgsh1in9p9w4d0y6:ebh2y8tqym512wqs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dcwgz0j1qwfden0d
+spring.datasource.username=mgsh1in9p9w4d0y6
+spring.datasource.password=lkrjxkwonueq68pn
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
