--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,16 @@ server.port=5000
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=update
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/curso_java
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_java
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://mgsh1in9p9w4d0y6:ebh2y8tqym512wqs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dcwgz0j1qwfden0d
-spring.datasource.username=mgsh1in9p9w4d0y6
-spring.datasource.password=lkrjxkwonueq68pn
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://mgsh1in9p9w4d0y6:ebh2y8tqym512wqs.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/dcwgz0j1qwfden0d
+#spring.datasource.username=mgsh1in9p9w4d0y6
+#spring.datasource.password=lkrjxkwonueq68pn
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
